# scrattch.py

./: README.md  pyproject.toml
src/scrattch/: cl_stats.py  de_ebayes.py  de_genes.py  diff_expression.py
tests/: conftest.py  test_cl_stats.py  test_de_genes.py
tests/adhoc/: compare_cl_stats.py  compare_de_genes_all_pairs.py
